crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('[10,11,12,13,14,15]', '$[*] ? (@ < $value)', '{\"value\" : 13}');"
---
SelectStmt@0..95
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..93
    List@14..93
      FuncCall@14..93
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..52
          Sconst@31..52 "'[10,11,12,13,14,15]'"
        Ascii44@52..53 ","
        Whitespace@53..54 " "
        AConst@54..75
          Sconst@54..75 "'$[*] ? (@ < $value)'"
        Ascii44@75..76 ","
        Whitespace@76..77 " "
        AConst@77..93
          Sconst@77..93 "'{\"value\" : 13}'"
  Ascii41@93..94 ")"
  Ascii59@94..95 ";"

