crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@102.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('[10,11,12,13,14,15]', '$[0,1] ? (@ < $x.value)', '{\"x\": {\"value\" : 13}}');"
---
SelectStmt@0..106
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..104
    List@14..104
      FuncCall@14..104
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..52
          Sconst@31..52 "'[10,11,12,13,14,15]'"
        Ascii44@52..53 ","
        Whitespace@53..54 " "
        AConst@54..79
          Sconst@54..79 "'$[0,1] ? (@ < $x.val ..."
        Ascii44@79..80 ","
        Whitespace@80..81 " "
        AConst@81..104
          Sconst@81..104 "'{\"x\": {\"value\" : 13}}'"
  Ascii41@104..105 ")"
  Ascii59@105..106 ";"

