crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('[10,11,12,13,14,15]', '$[0 to 2] ? (@ < $value)', '{\"value\" : 15}');"
---
SelectStmt@0..100
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..98
    List@14..98
      FuncCall@14..98
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..52
          Sconst@31..52 "'[10,11,12,13,14,15]'"
        Ascii44@52..53 ","
        Whitespace@53..54 " "
        AConst@54..80
          Sconst@54..80 "'$[0 to 2] ? (@ < $va ..."
        Ascii44@80..81 ","
        Whitespace@81..82 " "
        AConst@82..98
          Sconst@82..98 "'{\"value\" : 15}'"
  Ascii41@98..99 ")"
  Ascii59@99..100 ";"

