crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@105.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('[1,\"1\",2,\"2\",null]', '$[*] ? (@ == $value)', '{\"value\" : \"1\"}');"
---
SelectStmt@0..96
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..94
    List@14..94
      FuncCall@14..94
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..51
          Sconst@31..51 "'[1,\"1\",2,\"2\",null]'"
        Ascii44@51..52 ","
        Whitespace@52..53 " "
        AConst@53..75
          Sconst@53..75 "'$[*] ? (@ == $value)'"
        Ascii44@75..76 ","
        Whitespace@76..77 " "
        AConst@77..94
          Sconst@77..94 "'{\"value\" : \"1\"}'"
  Ascii41@94..95 ")"
  Ascii59@95..96 ";"

