crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@106.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('[1,\"1\",2,\"2\",null]', '$[*] ? (@ == $value)', '{\"value\" : null}');"
---
SelectStmt@0..97
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..95
    List@14..95
      FuncCall@14..95
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..51
          Sconst@31..51 "'[1,\"1\",2,\"2\",null]'"
        Ascii44@51..52 ","
        Whitespace@52..53 " "
        AConst@53..75
          Sconst@53..75 "'$[*] ? (@ == $value)'"
        Ascii44@75..76 ","
        Whitespace@76..77 " "
        AConst@77..95
          Sconst@77..95 "'{\"value\" : null}'"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

