crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@109.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('{}', '$ ? (@ == @)');"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..51
    List@14..51
      FuncCall@14..51
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..35
          Sconst@31..35 "'{}'"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        AConst@37..51
          Sconst@37..51 "'$ ? (@ == @)'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

