crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@110.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from jsonb_path_query('[]', 'strict $ ? (@ == @)');"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..58
    List@14..58
      FuncCall@14..58
        Ident@14..30 "jsonb_path_query"
        Ascii40@30..31 "("
        AConst@31..35
          Sconst@31..35 "'[]'"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        AConst@37..58
          Sconst@37..58 "'strict $ ? (@ == @)'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

